RESOLVED FIXED29172
[V8] OwnHandle might get a weak callback after destruction
https://bugs.webkit.org/show_bug.cgi?id=29172
Summary [V8] OwnHandle might get a weak callback after destruction
Adam Barth
Reported 2009-09-11 01:33:57 PDT
Be sure to clear our weak reference when we clear the OwnHandle to make sure we don't get a callback after we've destructed ourselves.
Attachments
Patch v1 (1.73 KB, patch)
2009-09-11 01:37 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2009-09-11 01:37:07 PDT
Created attachment 39416 [details] Patch v1
Eric Seidel (no email)
Comment 2 2009-09-11 16:50:50 PDT
Comment on attachment 39416 [details] Patch v1 Was this causing crashes? Is this a testable change?
Adam Barth
Comment 3 2009-09-11 17:02:31 PDT
I don't know of any crashes that this causes. This class currently has only one client. I don't think it's testable currently.
Eric Seidel (no email)
Comment 4 2009-09-15 23:03:14 PDT
Comment on attachment 39416 [details] Patch v1 You ChangeLog should mention that it's not testable.
WebKit Commit Bot
Comment 5 2009-09-17 12:59:58 PDT
Comment on attachment 39416 [details] Patch v1 Clearing flags on attachment: 39416 Committed r48486: <http://trac.webkit.org/changeset/48486>
WebKit Commit Bot
Comment 6 2009-09-17 13:00:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.