2009-09-17  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        [V8] OwnHandle might get a weak callback after destruction
        https://bugs.webkit.org/show_bug.cgi?id=29172

        Be sure to clear out weak reference so we don't get a weak callback
        after we've destructed ourselves.  Also, removed some tricky methods
        that had no clients.

        * bindings/v8/OwnHandle.h:
        (WebCore::OwnHandle::clear):

Canonical link: https://commits.webkit.org/40051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48486 268f45cc-cd09-0410-ab3c-d52691b4dbfc